testing cloud vendor repository